# solidity2llvm

./: .gitignore  CMakeLists.txt
cmake/: EthCompilerSettings.cmake  FindLLVM.cmake  FindZ3.cmake
examples/c/: test1.c
examples/solidity/: storage-if.sol  struct.sol
libdevcore/: CMakeLists.txt  Debug.cpp  Debug.h
libsolidity/: CMakeLists.txt
libsolidity/clang/: ClangCompiler.cpp  ClangCompiler.h
libsolidity/interface/: CompilerStack.cpp  CompilerStack.h  Debug.cpp  Debug.h
libsolidity/llvm/: ClangCompiler.cpp  ClangCompiler.h  LlvmCompiler.cpp  LlvmCompiler.h
solc/: CMakeLists.txt  CommandLineInterface.cpp  CommandLineInterface.h  main.cpp
trung/benchmark/simple/: stmt-struct.sol
trung/docs/: llvm.md  solidity.md
trung/examples/c/: test1.c
trung/examples/solidity/: for.sol  storage.sol
trung/test/c/: enum.c  run-clang.sh  stmt-struct.c  struct.c
trung/test/compilationTests/corion/: safeMath.sol
trung/test/simple/: enum.sol  struct-simple.sol  struct.sol  tuple-small.sol  tuple.sol
trung/test/solidity/: arithmetic.sol  array.sol  ballot.sol  class.sol  conditional.sol  for.sol  functioncall.sol  mapping.sol  new.sol  storage-if.sol  storage.sol  struct.sol
trung/test/solidity-stmt/: stmt-new.sol  stmt-struct.sol
